--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 
 <h1>Crow Canyon</h1>
 <p>I'm hosted with GitHub pages.</p>
-<img src="squash.png">
+<img src="https://jkalberto.github.io/jkalberto.gethub.io/squash.png">
 </body>
 </html>
